--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -127,8 +127,8 @@
 				a must for the grader of the exercise, see below). Otherwise, 
 				send your solutions as PDFs </span>
 				<ul>
-					<li>&nbsp;<a href="http://texniccenter.org/" target="_blank">http://texniccenter.org/</a><b> is a&nbsp; decent open-source developing 
-		environment.</b></li>
+					<li>&nbsp;<a href="http://texniccenter.org/" target="_blank">http://texniccenter.org/</a><b> </b>is a&nbsp; decent open-source developing 
+		environment. Alternatively, you can try the &quot;WYSIWYG&quot; editor <b> &nbsp;<a href="http://www.lyx.org/Download" target="_blank">Lyx</a>.</b></li>
 					<li><b>
 					<a href="http://ftp.cc.uoc.gr/mirrors/CTAN/info/lshort/english/lshort.pdf" target="_blank">The not so short introduction to 
 					<span class="il">Latex</span></a> is a 
