--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -36,6 +36,9 @@
 .auto-style11 {
 	font-size: larger;
 }
+.auto-style12 {
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 </style>
 </head>
 
@@ -88,6 +91,8 @@
 			<a href="http://www.cs.tau.ac.il/cseminar/">here</a><b>. </b></li>
 			<li>
 			<big>Problem set<b> </b></big>1 is out. Due date Nov 20.</li>
+			<li>
+			<big>Problem set<b> </b></big>2 is out. Due date Dec 4.</li>
 		</ol>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
@@ -220,8 +225,7 @@
   <p class="auto-style5">Nov. 15</p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
-  <p class="auto-style6">Finish lecture #2 and Hardcore predicate for any one-way functions.
-  <b><a href="HardCorePredicates.pdf">[slides]</a></b></p>
+  <p class="auto-style6">Finish lecture #2 </p>
   </td>
  </tr>
  
@@ -235,9 +239,125 @@
 			<big><b>Nov. 22</b></big></p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
-  <p class="auto-style6">Finish lecture #3 and Pseudorandom functions</p>
+  <p class="auto-style6">Hardcore predicate for any one-way functions.
+  <a href="file:///C:/Users/iftachh/HPage/HPage/Courses/FOC/Fall11/HardCorePredicates.pdf">
+  [slides]</a> </p>
   </td>
  </tr>
+ 
+ <tr style="">
+  <td style="width: 37pt; border-right: 1pt solid rgb(136, 136, 136); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; -moz-border-image: none; padding: 2.05pt; border-left-style: solid; border-left-width: 1pt; border-top-style: none; border-top-width: medium; border-bottom-style: solid; border-bottom-width: 1pt;">
+  <p class="MsoNormal">5</p>
+  </td>
+  <td style="width: 89.15pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" valign="top" width="119">
+  <p class="auto-style5">Nov. 29</p>
+  </td>
+  <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
+  <p class="auto-style6">&nbsp;</p>
+  </td>
+ </tr>
+ <tr style="">
+  <td style="width: 37pt; border-right: 1pt solid rgb(136, 136, 136); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; -moz-border-image: none; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt; border-left-style: solid; border-left-width: 1pt; border-top-style: none; border-top-width: medium; border-bottom-style: solid; border-bottom-width: 1pt;">
+  <p class="MsoNormal">
+  6</p>
+  </td>
+  <td style="width: 89.15pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="119">
+  <p class="MsoNormal">
+			<big><b>Dec. 6</b></big></p>
+  </td>
+  <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
+  <p class="auto-style6">&nbsp;</p>
+  </td>
+ </tr>
+ <tr style="">
+  <td style="width: 37pt; border-right: 1pt solid rgb(136, 136, 136); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; -moz-border-image: none; padding: 2.05pt; border-left-style: solid; border-left-width: 1pt; border-top-style: none; border-top-width: medium; border-bottom-style: solid; border-bottom-width: 1pt;">
+  <p class="auto-style5">7</p>
+  </td>
+  <td style="width: 89.15pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" valign="top" width="119">
+  <p class="auto-style5">Dec . 13</p>
+  </td>
+  <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
+  <p class="auto-style6">&nbsp;</p>
+  </td>
+ </tr>
+ 
+ <tr style="">
+  <td style="width: 37pt; border-right: 1pt solid rgb(136, 136, 136); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; -moz-border-image: none; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt; border-left-style: solid; border-left-width: 1pt; border-top-style: none; border-top-width: medium; border-bottom-style: solid; border-bottom-width: 1pt;">
+  <p class="auto-style5">
+  8</p>
+  </td>
+  <td style="width: 89.15pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="119">
+  <p class="MsoNormal">
+			<big><b>Dec. 20</b></big></p>
+  </td>
+  <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
+  <p class="auto-style6">&nbsp;</p>
+  </td>
+ </tr>
+ 
+  </tr>
+ <tr style="">
+  <td style="width: 37pt; border-right: 1pt solid rgb(136, 136, 136); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; -moz-border-image: none; padding: 2.05pt; border-left-style: solid; border-left-width: 1pt; border-top-style: none; border-top-width: medium; border-bottom-style: solid; border-bottom-width: 1pt;">
+  <p class="auto-style5">9</p>
+  </td>
+  <td style="width: 89.15pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" valign="top" width="119">
+  <p class="auto-style5">Dec. 27</p>
+  </td>
+  <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
+  <p class="auto-style6">&nbsp;</p>
+  </td>
+ </tr>
+ <tr style="">
+  <td style="width: 37pt; border-right: 1pt solid rgb(136, 136, 136); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; -moz-border-image: none; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt; border-left-style: solid; border-left-width: 1pt; border-top-style: none; border-top-width: medium; border-bottom-style: solid; border-bottom-width: 1pt;">
+  <p class="auto-style5">
+  10</p>
+  </td>
+  <td style="width: 89.15pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="119">
+  <p class="MsoNormal">
+			<big><b>Jan. 3</b></big></p>
+  </td>
+  <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
+  <p class="auto-style6">&nbsp;</p>
+  </td>
+ </tr>
+ <tr style="">
+  <td style="width: 37pt; border-right: 1pt solid rgb(136, 136, 136); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; -moz-border-image: none; padding: 2.05pt; border-left-style: solid; border-left-width: 1pt; border-top-style: none; border-top-width: medium; border-bottom-style: solid; border-bottom-width: 1pt;">
+  <p class="auto-style5">11</p>
+  </td>
+  <td style="width: 89.15pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" valign="top" width="119">
+  <p class="auto-style5">Jan. 10</p>
+  </td>
+  <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
+  <p class="auto-style6">&nbsp;</p>
+  </td>
+ </tr>
+ 
+ <tr style="">
+  <td style="width: 37pt; border-right: 1pt solid rgb(136, 136, 136); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; -moz-border-image: none; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt; border-left-style: solid; border-left-width: 1pt; border-top-style: none; border-top-width: medium; border-bottom-style: solid; border-bottom-width: 1pt;">
+  <p class="auto-style5">
+  12</p>
+  </td>
+  <td style="width: 89.15pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="119">
+  <p class="MsoNormal">
+			<big><b>Jan. 17</b></big></p>
+  </td>
+  <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
+  <p class="auto-style6">&nbsp;</p>
+  </td>
+ </tr>
+ 
+ <tr style="">
+  <td style="width: 37pt; border-right: 1pt solid rgb(136, 136, 136); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; -moz-border-image: none; padding: 2.05pt; border-left-style: solid; border-left-width: 1pt; border-top-style: none; border-top-width: medium; border-bottom-style: solid; border-bottom-width: 1pt;">
+  <p class="MsoNormal">&nbsp;<span class="auto-style12">13</span></p>
+  </td>
+  <td style="width: 89.15pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" valign="top" width="119">
+  <p class="auto-style5">Jan. 24</p>
+  </td>
+  <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
+  <p class="auto-style6">&nbsp;</p>
+  </td>
+ </tr>
+
 </tbody></table>
 
 			</b>
@@ -261,6 +381,10 @@
 			<big><b>Problem Sets</b></big></div>
 		<ol>
 			<li><a href="ProblemSets/PS1.pdf">PS1</a> (exe 1-3), due date <strong>Nov </strong> 20 
+			. 
+			</li>
+			<li><a href="ProblemSets/PS2.pdf">PS2</a> (exe 4-5), due date <strong>
+			Dec 4</strong> 
 			. <br /><b><br /><br /><br /><br /><br /><br /><br /><br /></b>
 			</li>
 		</ol>
