--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -240,8 +240,7 @@
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
   <p class="auto-style6">Hardcore predicate for any one-way functions.
-  <a href="file:///C:/Users/iftachh/HPage/HPage/Courses/FOC/Fall11/HardCorePredicates.pdf">
-  [slides]</a> </p>
+  <a href="HardCorePredicates.pdf">[slides]</a> </p>
   </td>
  </tr>
  
