--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -39,6 +39,9 @@
 .auto-style12 {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+.auto-style13 {
+	font-weight: bold;
+}
 </style>
 </head>
 
@@ -197,7 +200,8 @@
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
   <p class="auto-style6">Introduction; Administrativia, course topics, basic 
   notations, one-way 
-  functions. <a href="Introduction_admin.pdf">[slides]</a></p>
+  functions. <a href="Introduction_admin.pdf">[first part slides]</a>
+  <span class="auto-style13"><a href="OWF.pdf">[second part slides]</a></span> </p>
   </td>
  </tr>
  <tr style="">
@@ -240,7 +244,8 @@
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
   <p class="auto-style6">Hardcore predicate for any one-way functions.
-  <a href="HardCorePredicates.pdf">[slides]</a> </p>
+  <a href="file:///C:/Users/iftachh/HPage/HPage/Courses/FOC/Fall11/HardCorePredicates.pdf">
+  [slides]</a> </p>
   </td>
  </tr>
  
@@ -252,7 +257,8 @@
   <p class="auto-style5">Nov. 29</p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
-  <p class="auto-style6">&nbsp;</p>
+  <p class="auto-style6">Pseudorandom functions.
+  <a href="Pseudorandomfunctions.pdf">[slides]</a> </p>
   </td>
  </tr>
  <tr style="">
