--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -95,7 +95,9 @@
 			<li>
 			<big>Problem set<b> </b></big>1 is out. Due date Nov 20.</li>
 			<li>
-			<big>Problem set<b> </b></big>2 is out. Due date Dec 4.</li>
+			<big>Problem set<b> </b></big>2 is out. Due date Dec 11.</li>
+			<li>
+			<big>Problem set<b> </b>3</big> is out. Due date Dec 18.</li>
 		</ol>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
@@ -270,7 +272,8 @@
 			<big><b>Dec. 6</b></big></p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
-  <p class="auto-style6">&nbsp;</p>
+  <p class="auto-style6">Non adaptive to adaptive PRF, and Interactive Proof and 
+  Zero Knowledge . <a href="InteractiveProofs.pdf">[slides]</a> </p>
   </td>
  </tr>
  <tr style="">
@@ -388,8 +391,11 @@
 			. 
 			</li>
 			<li><a href="ProblemSets/PS2.pdf">PS2</a> (exe 4-5), due date <strong>
-			Dec 4</strong> 
-			. <br /><b><br /><br /><br /><br /><br /><br /><br /><br /></b>
+			Dec 11</strong>.</li>
+			<li><a href="ProblemSets/PS3.pdf">PS3</a> (exe 6), due date <strong>
+			Dec </strong> 
+			18 
+			.&nbsp; <br /><b><br /><br /><br /><br /><br /><br /><br /><br /></b>
 			</li>
 		</ol>
 		<div class="header">
