--- a/index.html
+++ b/index.html
@@ -1182,14 +1182,13 @@ that the receiver does not learn any additional information on
 		  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold/">
 		  <span style="" lang="EN-US">Omer Reingold</span></a></span></span><span style="font-weight: 400;"><br>
 		  <span dir="LTR"><b>On the Power of the Randomized Iterate</b> [<a href="javascript:toggle('abstract-RI')">Abstract</a>]
-				<span style="color: blue;">[</span><a href="papers/RandomizedIteate/Randomized_Iterate.pps">Slides</a><span style="color: blue;">]</span></span></span><br><span style="font-weight: 400;">
-		  To appear in
-					<span class="style14"><span dir="LTR">S</span><span dir="LTR" class="style14"><span dir="LTR">IAM 
-		  Journal of Computing </span></span></span><br>Advanced in Cryptology - CRYPTO, 2006
-				<a href="papers/RandomizedIteate/Randomized_Iterate_CryptoCR.pdf">[PDF]</a><br>
-		  <span class="style5">Draft of full version</span><span style="color: blue;"><span style="color: blue;"> 
+				<span style="color: blue;">[</span><a href="papers/RandomizedIteate/Randomized_Iterate.pps">Slides</a><span style="color: blue;">]</span></span></span><br>
+		  <span style="font-weight: 400;">
+		  <span class="style14"><span dir="LTR">S</span><span dir="LTR" class="style14"><span dir="LTR">IAM 
+		  Journal of Computing 2011<span style="color: blue;"> 
 		  <a href="papers/RandomizedIteate/Main_Random_iterate_Ver6.pdf">[PDF]</a><b>&nbsp;
-					<span class="style14"><span dir="LTR" style="font-weight: 400"><img height="12" src="updated.gif" width="60"></span></span></b></span></span></span></h2>
+					<span dir="LTR" style="font-weight: 400"><img height="12" src="updated.gif" width="60"></span></b></span></span></span></span><br>Advanced in Cryptology - CRYPTO, 2006
+				<a href="papers/RandomizedIteate/Randomized_Iterate_CryptoCR.pdf">[PDF]</a></span></h2>
 		  <div class="box" id="abstract-RI" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">We consider two of the
 					most fundamental theorems in Cryptography. The first, due to
