--- a/Courses/FOC/Fall11/index.html
+++ b/Courses/FOC/Fall11/index.html
@@ -12,6 +12,12 @@
 
 
 
+  .auto-style1 {
+	font-size: large;
+}
+
+
+
   </style>
 </head>
 
@@ -20,7 +26,7 @@
 <div style="text-align : left ; width :900px" >
 <script>document.write(menu)</script>
  <div id=content>
-<p>0368-4162-01, Fall 2011:<br />
+<p><span class="auto-style1">0368-4162-01, Fall 2011:</span><br />
 
 <h1>Foundation of Cryptography </h1>
 
@@ -28,10 +34,12 @@ Tuesdays 10:00-13:00, Room: דן דויד  210 <br /><br />
 
 <b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 20<br /><br />
 
-<b>Reception:</b> Sundays 9:00-10:00 (please coordinate via email in advance)</p>
+<b>Reception:</b> Sundays 9:00-10:00 (please coordinate via email in advance)<br />
 
 <p><b>Abstract:</b> This is a a graduate-level introduction to the theoretical foundations of Cryptography. We'll study the basic cryptographic primitives (e.g., one-way functions and pseudorandom generators) while focusing on formal definitions and rigorous proofs. Some more advanced topics will be also touched upon.       </p>
- <b> Announcements</b> <br />
+ <b> <br />
+	 <br />
+	 Announcements</b> <br />
 
  <ol>
   <li>The website of the Greater Tel-Aviv Area Crypto seminar (GTACS) can be found here.</li>
