--- a/Courses/FOC/Fall11/index.html
+++ b/Courses/FOC/Fall11/index.html
@@ -39,7 +39,7 @@ Tuesdays 10:00-13:00, Room: דן דויד  210 <br /><br />
 <p><b>Abstract:</b> This is a a graduate-level introduction to the theoretical foundations of Cryptography. We'll study the basic cryptographic primitives (e.g., one-way functions and pseudorandom generators) while focusing on formal definitions and rigorous proofs. Some more advanced topics will be also touched upon.       </p>
  <b> <br />
 	 <br />
-	 Announcements</b> <br />
+	 <span class="auto-style1">Announcements</span></b> <br />
 
  <ol>
   <li>The website of the Greater Tel-Aviv Area Crypto seminar (GTACS) can be found here.</li>
