--- a/Courses/FOC/Fall11/requirements.html
+++ b/Courses/FOC/Fall11/requirements.html
@@ -12,6 +12,15 @@
 
 
 
+  .auto-style1 {
+	direction: ltr;
+}
+.auto-style2 {
+	text-decoration: underline;
+}
+
+
+
   </style>
 </head>
 
@@ -23,23 +32,34 @@
 <h1>Course requirements</h1>
 <ol>
 <li> Homework: 3-5 homework sets 30% <br />
-Answers (word, PDF or scanned text) should be sent to  <a href="mailto:foc.exc@gmail.com">foc.exc@gmail.com</a> (Title: Question #,  Israeli Id #)  as  PDFs <br />
-Late submissions will be ignored unless approved  by me  first.<br />
 
-     Writing your solution using Latex is recommended  (and a must for the grader of the exercise, see below). Otherwise, send your solutions as PDFs
+<li>Grading other students exercises: 10%<li>A final (in class) exam  60%
+
+ </ol>
+
+     <h4>Homework</h4>
+	 Solutions, in&nbsp; <span class="auto-style2"><strong>PDF</strong></span> 
+	 format,&nbsp; should be sent to  <a href="mailto:foc.exc@gmail.com">foc.exc@gmail.com</a>, 
+	 Title: Question #, Israeli Id #.<br />
+Late submissions will be ignored unless approved  first by me.<br />
+
+     Writing your solution using Latex is recommended (and a must for the grader 
+	 of the exercise, see below). For newcomers to Latex,&nbsp;
       <ul>
   <li><a href="http://texniccenter.org/" target="_blank">http://texniccenter.org/</a> is a  decent open-source developing environment. Alternatively, you can try the "WYSIWYG" editor  <a href="http://www.lyx.org/Download" target="_blank">Lyx</a>.</li>
   <li>"<a href="http://ftp.cc.uoc.gr/mirrors/CTAN/info/lshort/english/lshort.pdf" target="_blank">The not so short introduction to Latex</a>" is a good introductionary text.</li>
-  <li>See example</li>
+  <li>See <a href="HandoutExample">example</a></li>
 </ul>
 
-<li>Grading other students exercises: Please add your name to the graders list here (only name, no email address ) and email <a href="mailto:foc.exc@gmail.com"> foc.exc@gmail.com</a> (Title: Grader #, Name, Id)
-When grading, I recommend writing your comments on the submission itself, using a PDF writer that enables adding comment (e.g.,  <a href="http://download.cnet.com/Adobe-Reader-X/3000-10743_4-10000062.html" target="_blank">Adobe Reader X</a>)
+	 <h4>&nbsp;</h4>
+	 <h4>Grading</h4>
+	 <p class="auto-style1">Please add your name to the graders list here (only 
+	 name, no email address ) and email <a href="mailto:foc.exc@gmail.com"> foc.exc@gmail.com</a> (Title: Grader #, Name, Id)
+	 <br />
+	 When grading, I recommend writing your comments on the submission itself, using a PDF writer that enables adding comment (e.g.,  <a href="http://download.cnet.com/Adobe-Reader-X/3000-10743_4-10000062.html" target="_blank">Adobe Reader X</a>)
 
 
-<li>A final (in class) exam  60%
-
- </ol>
+	 </p>
 
   </div></div></div>
 </body>
