--- a/Courses/FOC/Fall11/schedule.html
+++ b/Courses/FOC/Fall11/schedule.html
@@ -26,7 +26,6 @@
 <h1>  Schedule and Slides  </h1>
 
 <table border=1 style=" ;" cellpadding=0 cellspacing =0 id=schedule>
-<tr>
 <tbody class=text >
 <th width=10%>Week</td>
 <th width=10%>Date</td>
@@ -37,13 +36,13 @@
 <tr>
 <td>1</td>
 <td>Nov. 1</td>
-<td>Introduction; Administrativia, course topics, basic notations, one-way functions. [<a href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/Fall11/Introduction_admin.pdf" target="_blank">first part slides</a>] [<a href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/Fall11/OWF.pdf" target="_blank">second part slides</a>]</td>
+<td>Introduction; Administrativia, course topics, basic notations, one-way functions. [<a href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/Fall11/Introduction_admin.pdf" target="_blank">first part slides</a>] [<a href="Slides/OWF.pdf" target="_blank">second part slides</a>]<a href="Slides/Introduction_admin.pdf">Slides/Introduction_admin.pdf</a></td>
 </tr>
 
 <tr>
 <td>2</td>
 <td>Nov. 8</td>
-<td>Finish lecture #1 and, Computational indistinguishability and pseudorandom generators . [<a href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/Fall11/Pseudorandomness.pdf" target="_blank">slides</a>]</td>
+<td>Finish lecture #1 and, Computational indistinguishability and pseudorandom generators . [<a href="Slides/Pseudorandomness.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
@@ -55,7 +54,7 @@
 <tr>
 <td>4</td>
 <td>Nov. 22</td>
-<td>Hardcore predicate for any one-way functions. [<a href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/Fall11/HardCorePredicates.pdf" target="_blank">slides</a>]</td>
+<td>Hardcore predicate for any one-way functions. [<a href="Slides/HardCorePredicates.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
@@ -63,19 +62,19 @@
 <td>Nov. 29</td>
 <td>
 
-Pseudorandom functions. [<a href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/Fall11/Pseudorandomfunctions.pdf" target="_blank">slides</a>] </td>
+Pseudorandom functions. [<a href="Slides/Pseudorandomfunctions.pdf" target="_blank">slides</a>] </td>
 </tr>
 
 <tr>
 <td>6</td>
 <td>Dec. 6</td>
-<td>Non adaptive to adaptive PRF, and Interactive Proof and Zero Knowledge . [<a href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/Fall11/InteractiveProofs.pdf" target="_blank">slides</a>]</td>
+<td>Non adaptive to adaptive PRF, and Interactive Proof and Zero Knowledge . [<a href="Slides/InteractiveProofs.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
 <td>7</td>
 <td>Dec.  13</td>
-<td></td>
+<td>Zero Knowledge for NP</td>
 </tr>
 
 <tr>
