--- a/Courses/FOC/Fall11/sets.html
+++ b/Courses/FOC/Fall11/sets.html
@@ -27,6 +27,12 @@
 <li><a href="ProblemSets/PS1.pdf">PS2</a> (exe 4-5), due date Dec 4 .
 
 
+	 <li><a href="ProblemSets/PS3.pdf">PS3</a> (exe 6), due date <strong>
+			Dec </strong> 
+			18 
+			.&nbsp;
+
+
 </ol>
 
 
