--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ DIV.Section1 {
     <tr>  <td align="left">
  	   <span class="style16" ><b>Teaching </b><br> </span>
  	   <span class="auto-style6">
-		<a <font="" href="Courses/FOC/Fall11/main.html" size="2">Foundation of 
+		<a <font="" href="Courses/FOC/Fall11/index.html" size="2">Foundation of 
 		Cryptography (Fall 11)</a>,
 		<a <font="" href="Courses/Seminars/ComComp/index.html" size="2">Student 
 		seminar on Communication Complexity (Spring 12)</a></span><br></tr>
