--- a/Courses/FOC/Fall11/index.html
+++ b/Courses/FOC/Fall11/index.html
@@ -42,7 +42,8 @@ Tuesdays 10:00-13:00, Room: דן דויד  210 <br /><br />
 	 <span class="auto-style1">Announcements</span></b> <br />
 
  <ol>
-  <li>The website of the Greater Tel-Aviv Area Crypto seminar (GTACS) can be found here.</li>
+  <li>The website of the Greater Tel-Aviv Area Crypto seminar (GTACS) can be found 
+  <a href="http://www.cs.tau.ac.il/cseminar/">here</a>.</li>
   <li>Problem set 1 is out. Due date Nov 20.</li>
   <li>Problem set 2 is out. Due date Dec 4.</li>
 
