--- a/Courses/FOC/Fall11/requirements.html
+++ b/Courses/FOC/Fall11/requirements.html
@@ -15,9 +15,6 @@
   .auto-style1 {
 	direction: ltr;
 }
-.auto-style2 {
-	text-decoration: underline;
-}
 
 
 
@@ -38,7 +35,7 @@
  </ol>
 
      <h4>Homework</h4>
-	 Solutions, in&nbsp; <span class="auto-style2"><strong>PDF</strong></span> 
+	 Solutions, in&nbsp;<strong>PDF</strong> 
 	 format,&nbsp; should be sent to  <a href="mailto:foc.exc@gmail.com">foc.exc@gmail.com</a>, 
 	 Title: Question #, Israeli Id #.<br />
 Late submissions will be ignored unless approved  first by me.<br />
