--- a/Courses/FOC/Fall11/schedule.html
+++ b/Courses/FOC/Fall11/schedule.html
@@ -15,6 +15,16 @@
 
 
 
+  .auto-style1 {
+	color: #FF0000;
+	font-size: large;
+}
+
+
+
+
+
+
   </style>
 </head>
 
@@ -36,25 +46,27 @@
 <tr>
 <td>1</td>
 <td>Nov. 1</td>
-<td>Introduction; Administrativia, course topics, basic notations, one-way functions. [<a href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/Fall11/Introduction_admin.pdf" target="_blank">first part slides</a>] [<a href="Slides/OWF.pdf" target="_blank">second part slides</a>]<a href="Slides/Introduction_admin.pdf">Slides/Introduction_admin.pdf</a></td>
+<td>Introduction; Administrativia and course topics [<a href="Slides/Introduction_admin.pdf" target="_blank">slides</a>] 
+and , basic notations and One-Way Functions [<a href="Slides/OWF.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
 <td>2</td>
 <td>Nov. 8</td>
-<td>Finish lecture #1 and, Computational indistinguishability and pseudorandom generators . [<a href="Slides/Pseudorandomness.pdf" target="_blank">slides</a>]</td>
+<td>Finish lecture #1 [<a href="Slides/OWF.pdf" target="_blank">slides</a>] and, 
+Ccomputational Iindistinguishability and Pseudorandom Generators [<a href="Slides/OWF.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
 <td>3</td>
 <td>Nov. 15</td>
-<td>Finish lecture #2 </td>
+<td>Finish lecture #2 [<a href="Slides/OWF.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
 <td>4</td>
 <td>Nov. 22</td>
-<td>Hardcore predicate for any one-way functions. [<a href="Slides/HardCorePredicates.pdf" target="_blank">slides</a>]</td>
+<td>Hardcore Predicates for any one-way function [<a href="Slides/HardCorePredicates.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
@@ -62,19 +74,20 @@
 <td>Nov. 29</td>
 <td>
 
-Pseudorandom functions. [<a href="Slides/Pseudorandomfunctions.pdf" target="_blank">slides</a>] </td>
+Pseudorandom Functions [<a href="Slides/Pseudorandomfunctions.pdf" target="_blank">slides</a>] </td>
 </tr>
 
 <tr>
 <td>6</td>
 <td>Dec. 6</td>
-<td>Non adaptive to adaptive PRF, and Interactive Proof and Zero Knowledge . [<a href="Slides/InteractiveProofs.pdf" target="_blank">slides</a>]</td>
+<td>Non adaptive to adaptive PRFs (slides coming soon), and Interactive Proof and Zero Knowledge [<a href="Slides/InteractiveProofs.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
 <td>7</td>
 <td>Dec.  13</td>
-<td>Zero Knowledge for NP</td>
+<td>Commitment Schemes [<a href="Slides/Commitments.pdf" target="_blank">slides</a>] 
+and Zero Knowledge for NP&nbsp; [<a href="Slides/InteractiveProofs.pdf" target="_blank">slides</a>] </td>
 </tr>
 
 <tr>
@@ -98,7 +111,7 @@ Pseudorandom functions. [<a href="Slides/Pseudorandomfunctions.pdf" target="_bla
 <tr>
 <td>11</td>
 <td>Jan. 10</td>
-<td></td>
+<td class="auto-style1"><strong>No Class</strong></td>
 </tr>
 
 <tr>
