--- a/Courses/FOC/Fall11/schedule.html
+++ b/Courses/FOC/Fall11/schedule.html
@@ -16,8 +16,18 @@
 
 
   .auto-style1 {
-	color: #FF0000;
+	  color: #FF0000;
+	  font-size: large;
+  }
+
+
+
+
+
+
+  .auto-style2 {
 	font-size: large;
+	color: #0000FF;
 }
 
 
@@ -30,101 +40,107 @@
 
 <body onLoad="select_menu()">
 <div style="width : 100% ; " align=center>
-<div style="text-align : left ; width :900px" >
+<div style="text-align : left; width :934px; height: 532px;" >
 <script>document.write(menu)</script>
  <div class=content>
 <h1>  Schedule and Slides  </h1>
 
 <table border=1 style=" ;" cellpadding=0 cellspacing =0 id=schedule>
 <tbody class=text >
-<th width=10%>Week</td>
-<th width=10%>Date</td>
+<th style="width: 7%">Week</td>
+<th style="width: 14%">Date</td>
 <th>Class Topics</td>
 </tr>
 
 
 <tr>
-<td>1</td>
-<td>Nov. 1</td>
+<td style="width: 7%">1</td>
+<td style="width: 14%">Nov. 1</td>
 <td>Introduction; Administrativia and course topics [<a href="Slides/Introduction_admin.pdf" target="_blank">slides</a>] 
 and , basic notations and One-Way Functions [<a href="Slides/OWF.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
-<td>2</td>
-<td>Nov. 8</td>
+<td style="width: 7%">2</td>
+<td style="width: 14%">Nov. 8</td>
 <td>Finish lecture #1 [<a href="Slides/OWF.pdf" target="_blank">slides</a>] and, 
 Ccomputational Iindistinguishability and Pseudorandom Generators [<a href="Slides/OWF.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
-<td>3</td>
-<td>Nov. 15</td>
+<td style="width: 7%">3</td>
+<td style="width: 14%">Nov. 15</td>
 <td>Finish lecture #2 [<a href="Slides/OWF.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
-<td>4</td>
-<td>Nov. 22</td>
+<td style="width: 7%">4</td>
+<td style="width: 14%">Nov. 22</td>
 <td>Hardcore Predicates for any one-way function [<a href="Slides/HardCorePredicates.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
-<td>5</td>
-<td>Nov. 29</td>
+<td style="width: 7%">5</td>
+<td style="width: 14%">Nov. 29</td>
 <td>
 
 Pseudorandom Functions [<a href="Slides/Pseudorandomfunctions.pdf" target="_blank">slides</a>] </td>
 </tr>
 
 <tr>
-<td>6</td>
-<td>Dec. 6</td>
+<td style="width: 7%">6</td>
+<td style="width: 14%">Dec. 6</td>
 <td>Non adaptive to adaptive PRFs (slides coming soon), and Interactive Proof and Zero Knowledge [<a href="Slides/InteractiveProofs.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
-<td>7</td>
-<td>Dec.  13</td>
+<td style="width: 7%">7</td>
+<td style="width: 14%">Dec.  13</td>
 <td>Commitment Schemes [<a href="Slides/Commitments.pdf" target="_blank">slides</a>] 
 and Zero Knowledge for NP&nbsp; [<a href="Slides/InteractiveProofs.pdf" target="_blank">slides</a>] </td>
 </tr>
 
 <tr>
-<td>8</td>
-<td>Dec.  20</td>
+<td style="width: 7%">8</td>
+<td style="width: 14%">Dec.  20</td>
 <td></td>
 </tr>
 
 <tr>
-<td>9</td>
-<td>Dec.  27</td>
+<td style="width: 7%">9</td>
+<td style="width: 14%">Dec.  27</td>
 <td></td>
 </tr>
 
 <tr>
-<td>10</td>
-<td>Jan. 3</td>
+<td style="width: 7%">10</td>
+<td style="width: 14%">Jan. 3</td>
 <td></td>
 </tr>
 
 <tr>
-<td>11</td>
-<td>Jan. 10</td>
+<td style="width: 7%">11</td>
+<td style="width: 14%">Jan. 10</td>
 <td class="auto-style1"><strong>No Class</strong></td>
 </tr>
 
 <tr>
-<td>12</td>
-<td>Jan. 17</td>
+<td style="width: 7%">12</td>
+<td style="width: 14%">Jan. 17</td>
 <td></td>
 </tr>
 
 <tr>
-<td>13</td>
-<td>Jan. 24</td>
+<td style="width: 7%">13</td>
+<td style="width: 14%">Jan. 24</td>
 <td></td>
 </tr>
+<tr>
+<td style="width: 7%">14</td>
+<td style="width: 14%">Feb. 6&nbsp; (Monday)</td>
+<td class="auto-style2"><strong>Exam</strong></td>
+</tr>
+
  </table>
 </div></div></div>
 </body>
