--- a/Courses/FOC/Fall11/schedule.html
+++ b/Courses/FOC/Fall11/schedule.html
@@ -39,8 +39,8 @@
 </head>
 
 <body onLoad="select_menu()">
-<div style="width : 100% ; " align=center>
-<div style="text-align : left; width :934px; height: 532px;" >
+<div style="width : 100%; height: 564px;" align=center>
+<div style="text-align : left; width :927px; height: 556px;" >
 <script>document.write(menu)</script>
  <div class=content>
 <h1>  Schedule and Slides  </h1>
