--- a/Courses/FOC/Fall11/schedule.html
+++ b/Courses/FOC/Fall11/schedule.html
@@ -103,7 +103,7 @@ and Zero Knowledge for NP&nbsp; [<a href="Slides/InteractiveProofs.pdf" target="
 <tr>
 <td style="width: 7%">8</td>
 <td style="width: 14%">Dec.  20</td>
-<td></td>
+<td>Non Interactive Zero Knowledge&nbsp; [<a href="Slides/NIZK.pdf" target="_blank">slides</a>] </td>
 </tr>
 
 <tr>
@@ -142,6 +142,7 @@ and Zero Knowledge for NP&nbsp; [<a href="Slides/InteractiveProofs.pdf" target="
 </tr>
 
  </table>
+<br>
 </div></div></div>
 </body>
 
