--- a/Courses/FOC/Fall11/index.html
+++ b/Courses/FOC/Fall11/index.html
@@ -48,6 +48,7 @@ Tuesdays 10:00-13:00, Room: דן דויד  210 <br /><br />
   <li>Problem set 2 is out. Due date Dec 4.</li>
 
   <li> Problem set 3 is out. Due date Dec 18.
+	 <li> Problem set 3 is out. Due date Jan 5.
 </ol>
 
 </div></div></div>
