--- a/Courses/FOC/Fall11/schedule.html
+++ b/Courses/FOC/Fall11/schedule.html
@@ -109,13 +109,13 @@ and Zero Knowledge for NP&nbsp; [<a href="Slides/InteractiveProofs.pdf" target="
 <tr>
 <td style="width: 7%">9</td>
 <td style="width: 14%">Dec.  27</td>
-<td></td>
+<td>MACs and Signature Schemes [<a href="Slides/MacsAndSignatures.pdf" target="_blank">slides</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">10</td>
 <td style="width: 14%">Jan. 3</td>
-<td></td>
+<td>Encryption Schemes </td>
 </tr>
 
 <tr>
@@ -127,13 +127,13 @@ and Zero Knowledge for NP&nbsp; [<a href="Slides/InteractiveProofs.pdf" target="
 <tr>
 <td style="width: 7%">12</td>
 <td style="width: 14%">Jan. 17</td>
-<td></td>
+<td>Secure Computation </td>
 </tr>
 
 <tr>
 <td style="width: 7%">13</td>
 <td style="width: 14%">Jan. 24</td>
-<td></td>
+<td>Yao&#39;s Garbled Circuit </td>
 </tr>
 <tr>
 <td style="width: 7%">14</td>
