--- a/Courses/FOC/Fall11/schedule.html
+++ b/Courses/FOC/Fall11/schedule.html
@@ -64,13 +64,13 @@ and , basic notations and One-Way Functions [<a href="Slides/OWF.pdf" target="_b
 <td style="width: 7%">2</td>
 <td style="width: 14%">Nov. 8</td>
 <td>Finish lecture #1 [<a href="Slides/OWF.pdf" target="_blank">slides</a>] and, 
-Ccomputational Iindistinguishability and Pseudorandom Generators [<a href="Slides/OWF.pdf" target="_blank">slides</a>]</td>
+Ccomputational Iindistinguishability and Pseudorandom Generators [<a href="Slides/Pseudorandomness.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">3</td>
 <td style="width: 14%">Nov. 15</td>
-<td>Finish lecture #2 [<a href="Slides/OWF.pdf" target="_blank">slides</a>]</td>
+<td>Finish lecture #2 [<a href="Slides/Pseudorandomness.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
@@ -115,7 +115,7 @@ and Zero Knowledge for NP&nbsp; [<a href="Slides/InteractiveProofs.pdf" target="
 <tr>
 <td style="width: 7%">10</td>
 <td style="width: 14%">Jan. 3</td>
-<td>Encryption Schemes </td>
+<td>Encryption Schemes [<a href="Slides/Encryption.pdf" target="_blank">slides</a>] </td>
 </tr>
 
 <tr>
