--- a/Courses/FOC/Fall11/index.html
+++ b/Courses/FOC/Fall11/index.html
@@ -18,6 +18,12 @@
 
 
 
+  .auto-style2 {
+	color: #FF0000;
+}
+
+
+
   </style>
 </head>
 
@@ -48,8 +54,10 @@ Tuesdays 10:00-13:00, Room: דן דויד  210 <br /><br />
   <li>Problem set 2 is out. Due date Dec 4.</li>
 
   <li> Problem set 3 is out. Due date Dec 18.
-	 <li> Problem set 3 is out. Due date Jan 5.
-</ol>
+	 <li> Problem set 4 is out. Due date Jan 5.
+	 <li> Problem set 5 is out. Due date Jan 16.
+	 <li> <strong><span class="auto-style2">No class </span></strong>next 
+	 Tuesday&nbsp; (January 10).</ol>
 
 </div></div></div>
 </body>
