--- a/Courses/FOC/Fall11/sets.html
+++ b/Courses/FOC/Fall11/sets.html
@@ -34,7 +34,8 @@
 
 
 	 <li><a href="ProblemSets/PS4.pdf">PS4</a> (exe 7-9), due date <strong>
-			Jan </strong>5 .</ol>
+			Jan </strong>5 .<li><a href="ProblemSets/PS5.pdf">PS5</a> (exe 10-11), due date <strong>
+			Jan </strong>16.</ol>
 
 
 
