--- a/index.html
+++ b/index.html
@@ -525,13 +525,10 @@ This setting abstracts all known techniques for designing provably secure RSA-ba
 limitations of prior uninstantiability results.
 Unfortunately, we show that it is still impossible to reduce the security of
 RSA-FDH to any natural assumption even in our model. Thus, our result suggests 
-that in
-order to prove the security of a given instantiation of RSA-FDH, one should use 
-a
-non-black box security proof, or use specific properties of the RSA group
-that are not captured by its multiplicative structure alone.<br />
-<br />
-<br />
+that in order to prove the security of a given instantiation of RSA-FDH, one should use 
+a non-black box security proof, or use specific properties of the RSA group
+that are not captured by its multiplicative structure alone.<br /> <br />
+
 We complement our negative result with a positive result, showing that 
 the RSA-FDH signatures <strong>can</strong> be proven secure under the <strong>standard</strong> RSA assumption, provided that the number<br />
 of signing queries is <strong>a-priori bounded</strong>.
