--- a/Courses/FOC/Fall11/schedule.html
+++ b/Courses/FOC/Fall11/schedule.html
@@ -127,14 +127,20 @@ and Zero Knowledge for NP&nbsp; [<a href="Slides/InteractiveProofs.pdf" target="
 <tr>
 <td style="width: 7%">12</td>
 <td style="width: 14%">Jan. 17</td>
-<td>Secure Computation </td>
+<td>Encryption Schemes cont.&nbsp; [<a href="Slides/Encryption.pdf" target="_blank">slides</a>]&nbsp; </td>
 </tr>
 
 <tr>
 <td style="width: 7%">13</td>
 <td style="width: 14%">Jan. 24</td>
-<td>Yao&#39;s Garbled Circuit </td>
+<td>Secure Computation </td>
 </tr>
+<tr>
+<td style="width: 7%">13</td>
+<td style="width: 14%">Jan. 31</td>
+<td>Secure Computation + Summery </td>
+</tr>
+
 <tr>
 <td style="width: 7%">14</td>
 <td style="width: 14%">Feb. 6&nbsp; (Monday)</td>
