--- a/Courses/FOC/Fall11/schedule.html
+++ b/Courses/FOC/Fall11/schedule.html
@@ -63,14 +63,14 @@ and , basic notations and One-Way Functions [<a href="Slides/OWF.pdf" target="_b
 <tr>
 <td style="width: 7%">2</td>
 <td style="width: 14%">Nov. 8</td>
-<td>Finish lecture #1 [<a href="Slides/OWF.pdf" target="_blank">slides</a>] and, 
+<td>Finish lecture #1 and, 
 Ccomputational Iindistinguishability and Pseudorandom Generators [<a href="Slides/Pseudorandomness.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">3</td>
 <td style="width: 14%">Nov. 15</td>
-<td>Finish lecture #2 [<a href="Slides/Pseudorandomness.pdf" target="_blank">slides</a>]</td>
+<td>Finish lecture #2 </td>
 </tr>
 
 <tr>
@@ -127,18 +127,18 @@ and Zero Knowledge for NP&nbsp; [<a href="Slides/InteractiveProofs.pdf" target="
 <tr>
 <td style="width: 7%">12</td>
 <td style="width: 14%">Jan. 17</td>
-<td>Encryption Schemes cont.&nbsp; [<a href="Slides/Encryption.pdf" target="_blank">slides</a>]&nbsp; </td>
+<td>Encryption Schemes cont.&nbsp;</td>
 </tr>
 
 <tr>
 <td style="width: 7%">13</td>
 <td style="width: 14%">Jan. 24</td>
-<td>Secure Computation </td>
+<td>Encryption Schemes cont. and Secure Computation&nbsp; [<a href="Slides/SecureComp.pdf" target="_blank">slides</a>] </td>
 </tr>
 <tr>
 <td style="width: 7%">13</td>
 <td style="width: 14%">Jan. 31</td>
-<td>Secure Computation + Summery </td>
+<td>Secure Computation cont. and&nbsp; Summary </td>
 </tr>
 
 <tr>
