--- a/Courses/FOC/Fall11/sets.html
+++ b/Courses/FOC/Fall11/sets.html
@@ -35,7 +35,8 @@
 
 	 <li><a href="ProblemSets/PS4.pdf">PS4</a> (exe 7-9), due date <strong>
 			Jan </strong>5 .<li><a href="ProblemSets/PS5.pdf">PS5</a> (exe 10-11), due date <strong>
-			Jan </strong>16.</ol>
+			Jan </strong>16.<li><a href="ProblemSets/PS6.pdf">PS6</a> (exe 12-13), due date <strong>
+			Feb </strong>16.</ol>
 
 
 
