--- a/Courses/FOC/Fall11/index.html
+++ b/Courses/FOC/Fall11/index.html
@@ -57,7 +57,7 @@ Tuesdays 10:00-13:00, Room: דן דויד  210 <br /><br />
 	 <li> Problem set 4 is out. Due date Jan 5.
 	 <li> Problem set 5 is out. Due date Jan 16.
 	 <li> <strong><span class="auto-style2">No class </span></strong>next 
-	 Tuesday&nbsp; (January 10).</ol>
+	 Tuesday&nbsp; (January 10).<li> Problem set 6 is out. Due date Feb 16.</ol>
 
 </div></div></div>
 </body>
