--- a/Courses/Seminars/ComComp/index.html
+++ b/Courses/Seminars/ComComp/index.html
@@ -130,9 +130,7 @@ Fooling sets and rectangle size.  Rank lower bounds. Reading: [KN] Chapter
 1.3, 1.4.
 </li>
 <li>
-April 19:
-Decision trees and data structures I.  Reading:  [KN]  Chapter 4.3,  9.2
-</li>
+April 19: Decision trees. Reading: [KN] Chapter 4.3, 9.1</li>
 <li>
 May 3:
 Decision trees and data structures II.   Reading: [KN] Chapter 9.2, 9.3
